# pikyap

./: RK1.docx
DZ/travellers/: Cargo.toml  space_travellers.csv
DZ/travellers/src/: main.rs
Lab1/: oop.py  procedure.py
Lab1/Lab01/: Lab01.sln  Program.cs
Lab2/: main.py  test_main.py
Lab2/lab_python_oop/: circle.py  color.py  figure.py  rectangle.py  square.py
Lab3/: lab3 terminal.txt  process_data.py
Lab3/lab_python_fp/: field.py  gen_random.py  unique.py
Lab3/lab_python_fp_standalone/: cm_timer.py  print_result.py  sort.py
RK1/: main.py
RK2/: main.py  test_main.py
